# pg_ai_query

./: .clang-format  .gitignore  .gitmodules  .markdownlint.json  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  example_pg_ai.config
.agents/commands/: gh-issue
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: installation_issue.yml
.github/workflows/: ci.yml  claude-review.yml  docs.yml  formatting.yml  release.yml  security.yml
docs/: book.toml  mermaid-zoom.css  mermaid-zoom.js
docs/src/: api-reference.md  config-reference.md  configuration.md  explain-query.md  faq.md  generate-query.md  installation.md  introduction.md  nix-development.md  providers.md  quick-start.md
sql/: pg_ai_query--1.0.sql
src/: config.cpp  pg_ai_query.cpp  pg_ai_query_utils.cpp  prompts.cpp  utils.cpp
src/core/: logger.cpp  provider_selector.cpp  query_generator.cpp  query_parser.cpp  response_formatter.cpp
src/include/: config.hpp  gemini_client.h  logger.hpp  pg_ai_query_utils.hpp  prompts.hpp  provider_selector.hpp  query_generator.hpp  query_parser.hpp  response_formatter.hpp  utils.hpp
src/providers/gemini/: client.cpp
tests/: CMakeLists.txt  test_helpers.hpp
tests/fixtures/configs/: anthropic_only.ini  custom_endpoints.ini  empty_config.ini  gemini_only.ini  minimal_config.ini  valid_config.ini
tests/fixtures/responses/: error_table_not_found.json  multiple_warnings.json  raw_sql_only.txt  system_table_access.json  valid_query_markdown.txt  valid_query_response.json
tests/sql/: setup.sql  teardown.sql  test_extension_functions.sql
tests/unit/: test_config.cpp  test_gemini_client.cpp  test_provider_selector.cpp  test_query_parser.cpp  test_response_formatter.cpp  test_utils.cpp
